[package]
name = 'peaq-pallet-transaction'
version = '0.0.1'
description = 'A Transaction pallet as a message bridge for escrow wallet implementation.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
edition = '2021'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-pallet-transaction'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-std]
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'
default-features = false

# Fix vulnerable
[dependencies.regex]
version = "1.5.5"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.2'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
optional = true
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'
version = "6.0.0"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'
version = "6.0.0"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'
version = "6.0.0"

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
