[package]
name = 'peaq-pallet-transaction'
version = '0.1.1'
description = 'A Transaction pallet as a message bridge for escrow wallet implementation.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
edition = '2021'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-pallet-transaction'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-std = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
codec = { version = "3.2.2", default-features = false, features = ["derive"], package = "parity-scale-codec" }
frame-benchmarking = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
